--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -8,38 +8,39 @@
 </head>
 
 <body>
-  <div class="board">
-    <div class="item">
-      a
+  <div class="board" id="board">
+    <div class="item" id="1">
+
     </div>
-    <div class="item">
-      a
+    <div class="item" id="2">
+
     </div>
-    <div class="item">
-      a
+    <div class="item" id="3">
+
     </div>
-    <div class="item">
-      a
+    <div class="item" id="4">
+
     </div>
-    <div class="item">
-      a
+    <div class="item" id="5">
+
     </div>
-    <div class="item">
-      a
+    <div class="item" id="6">
+
     </div>
-    <div class="item">
-      a
+    <div class="item" id="7">
+
     </div>
-    <div class="item">
-      a
+    <div class="item" id="8">
+
     </div>
-    <div class="item">
-      a
+    <div class="item" id="9">
+
     </div>
   </div>
 </body>
 
-<!-- JS file -->
+<!-- JS file and jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="index.js" charset="utf-8"></script>
 
 </html>
